# MLRF_PROJECT

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
cifar-10-classifier/: cifar-10-classifier.py
cifar10_classifier/: cifar-10-classifier.py  classifier.py  config.py  data_getter.py  feature_extractor.py
cifar_10_classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: cifar-10-example.ipynb  demo.ipynb  test-maui-HOG.ipynb  test-maui-SIFT.ipynb
