[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cifar-10-classifier"
version = "0.0.1"
description = "CIFAR-10 classifier"
authors = [
  { "name": "Raphael Hatté" },
  { "name": "Maui Tadeje" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["cifar-10-classifier"]
force_sort_within_sections = true
